Revert "YUK-22359 Prevent DNP "Function Code Not Supported" from wiping out command results Changed to include result strings even when returns are not successful"
This reverts commit 0ff21b6504dc4ab6e0b17e0dd90f9c1c92b31a36.